# gamedevplayground

./: .gitignore  README.md
2D_level_designer/: CMakeLists.txt  LevelDesigner.cpp  LevelDesigner.h  main.cpp
2D_shooter/: CMakeLists.txt  Engine.cpp  Engine.h  Player.cpp  Player.h  main.cpp
2D_shooter/src/: DebugEngine.cpp  DebugEngine.h  Engine.cpp  Engine.h  Player.cpp  Player.h  Position.cpp  Position.h
2D_shooter_v1/: 2D_shooter.cbp  CMakeCache.txt  Makefile  cmake_install.cmake  game  main.cpp
2D_shooter_v1/src/: Engine.cpp  Engine.h
2D_shooter_v2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  game  main.cpp
2D_shooter_v2/src/: DebugEngine.cpp  DebugEngine.h  Engine.cpp  Engine.h  Player.cpp  Player.h
Game_in_a_week/: README.md
